-
Bug
-
Resolution: Done
-
P1: Critical
-
Qt Creator 4.1.0-beta1
-
None
-
d2c9466d79c68a36b1a2c0e3e8d512e69eedfc85
As memory events have no duration, the range restriction algorithm cannot figure out that it needs to add past events in order to show the level of memory usage.
The same probably holds for scene graph and pixmap cache events.
For Gerrit Dashboard: QTCREATORBUG-16552 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
164341,3 | QmlProfiler: Always dispatch memory and pixmap events | 4.1 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |